<resources>
    <string name="app_name">projekt</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login2">LOGIN</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="registration2">REGISTRATION</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="hello_world">Hello World</string>
    <string name="logout">LOGOUT</string>
    <string name="account">Account</string>
    <string name="subitem1">SubItem1</string>
    <string name="subitem2">SubItem2</string>
    <string name="konto">Konto</string>
    <string name="accountt">Account</string>
    <string name="settings">Settings</string>
    <string name="generate_raports">Generate reports</string>
    <string name="new_transaction">New Transaction</string>
    <string name="choose_date">Choose Date</string>
    <string name="amount1">Amount in PLN</string>
    <string name="description">Description</string>
    <string name="category">CATEGORIES</string>
    <string name="kategoria">Kategoria</string>
    <string name="categorytext">Category</string>
    <string name="add">Add</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="remove_transaction">Remove</string>
    <string name="category_transaction_item">Category</string>
    <string name="delete">Delete</string>
    <string name="sum">Sum</string>
    <string name="z">zł</string>
    <string name="edit">Edit</string>
    <string name="date">Date</string>
    <string name="custom">Custom</string>
    <string name="month">Month</string>
    <string name="today">Today</string>
    <string name="year">Year</string>
    <string name="logoutmenu">Logout</string>
    <string name="new_category">New Category</string>
    <string name="regular_payment">Regular Payments</string>
    <string name="expenses">EXPENSES</string>
    <string name="income">INCOME</string>
    <string name="create">+ CREATE</string>
    <string name="payment_name">Payment Name</string>
    <string name="add_automatically">Add automatically</string>
    <string name="daily_weekly_monthly_every_yeah">Daily, Weekly, Monthly, Every Yeah</string>
    <string name="frequency">Frequency</string>
    <string name="select_theme">Select Theme</string>
    <string name="darktheme">DarkTheme</string>
    <string name="language">Language</string>
    <string name="currency">Currency</string>
    <string name="help">Help</string>
    <string name="attach_file_photo">Attach File/Photo</string>
    <string name="describe_your_issue">Describe your issue</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="send">Send</string>
    <string name="contact_us">Contact Us:</string>
    <string name="additional_options">Additional Options:</string>
    <string name="tutorials">- Tutorials</string>
    <string name="faq">- FAQ</string>
    <string name="user_manual">- User Manual</string>
    <string name="help_options">Help Options:</string>
    <string name="welcome_to_household_budget_management_app_in_the_help_section_you_will_find_useful_information_and_tips_on_using_the_application">Welcome to household budget management app. In the Help section, you will find useful information and tips on using the application.</string>
    <string name="add_new_category">Add New Category</string>
    <string name="plus">+</string>
    <string name="accounts">Accounts</string>
    <string name="budget">Budget</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="msg_token">FCM Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">default_channel_id</string>
    <string name="default_notification_channel_name">Powiadomienia</string>
    <string name="expense">EXPENSE</string>
    <string name="type">Type</string>
    <string name="history">History</string>
    <string name="recover">Recover</string>
    <string name="choose_currency">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Choose currency</string>
    <string name="select_currency">\u0020\u0020\u0020Select your preferred currency</string>
    <string name="default_currency">PLN</string>
    <string name="rejestracja_i_logowanie">•To register in the app, click the "Click to Register" button on the login screen. Enter your email address and password, then click "REGISTRATION." After successful registration, you will be redirected to the login screen.\n•To log in to the app, enter your email address and password on the login screen, then click "LOGIN".</string>
    <string name="dodawanie_transakcji">•To add a new transaction, go to the add transaction screen. Select the type of transaction (expense or income), enter the amount, select the date, category, and optionally add a description. Click "Add" to save the transaction.</string>
    <string name="edytowanie_i_usuwanie">•To edit a transaction, go to the transaction management view, select the transaction you want to edit, click "Edit," make the changes, and save..\n•To delete a transaction, go to the transaction management view, select the transaction you want to delete, and click "Delete".</string>
    <string name="przegladanie_transakcji">•Transactions can be viewed in a list or calendar view. The user can sort and filter transactions by date and category.</string>
    <string name="generowanie_raportu">•To generate a report, go to the report generation section. Select the date range for which you want to generate the report, then click \'OK.\' The report will be saved to the device\'s memory.</string>
    <string name="savings_goals">Savings Goals</string>
    <string name="investments">Investments</string>

    <string-array name="currency_options">
        <item>PLN</item>
        <item>USD</item>
        <item>EUR</item>
        <item>ARS</item>
        <item>GBP</item>
    </string-array>

    <string-array name="currency_values">
        <item>PLN</item>
        <item>USD</item>
        <item>EUR</item>
        <item>ARS</item>
        <item>GBP</item>
    </string-array>
</resources>