<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Text description of the application -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_household_budget_management_app_in_the_help_section_you_will_find_useful_information_and_tips_on_using_the_application"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>

        <!-- List of help options -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_options"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <!-- Example help options -->
        <Button
            android:id="@+id/userManualButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/user_manual" />

        <Button
            android:id="@+id/faqButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/faq" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/tutorials" />

        <!-- Contact form for support -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <!-- Email Address -->
        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/your_email_address"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:autofillHints="" />

        <!-- Problem Description -->
        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/describe_your_issue"
            android:minHeight="48dp"/>

        <Button
            android:id="@+id/attach_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attach_file_photo"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>
</ScrollView>
