<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:text="PLN" />

        <TextView
            android:id="@+id/textViewAmount2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/sum" />

        <TextView
            android:id="@+id/textViewCategory2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/category_transaction_item" />

        <TextView
            android:id="@+id/textViewDescription2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/description" />

        <TextView
            android:id="@+id/textViewData2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/date" />
        <TextView
            android:id="@+id/textViewType2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/type" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal"
        android:gravity="start">

        <Button
            android:id="@+id/buttonDelete2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/buttonRecover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recover"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>




</LinearLayout>