<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView_currency_hidden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PLN"
        android:visibility="gone" />

    <TextView
        android:id="@+id/user_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Period"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        style="?android:attr/buttonBarButtonStyle">
        <Button
            android:id="@+id/today_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/month_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/year_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/custom_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>
    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="match_parent"
        android:layout_height="483dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/new_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_transaction"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/remove_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/remove_transaction"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/history"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>


</LinearLayout>

